# CausalCell

./: .gitignore  ARCHITECTURE_V3_FIX_PLAN.md  ARCHITECTURE_V4_AUDIT_AND_UPGRADE.md  AUDIT_10of10_ROADMAP.md  CITATION.cff  CausalCellBench_AUDIT_2026-07-08.json  CausalCellBench_ICML_Workshop_Manuscript.md  CausalCellBench_ICML_reframed.tex  CausalCellBench_Improvement_Plan.md  CausalCellBench_JEI_Manuscript.md  CausalCellBench_Proposal.md  CausalCellBench_Proposal_v4.md  CausalCellBench_Proposal_v5.md  Dockerfile  HANDOFF_2026-07-05_reframe.md  HANDOFF_PerturbCausal_2026-05-01.md  HANDOFF_PerturbCausal_2026-05-02.md  HANDOFF_PerturbCausal_2026-07-03.md  HANDOFF_PerturbCausal_V4_2026-05-28.md  INSTALL.md  Makefile  README.md  RECOMMENDATION_the_real_direction.md  REFRAME_PATCH.md  RESULTS.md  RESULTS_A3_mechanism_discriminator.md  RESULTS_GENOME_SCALE.md  RESULTS_INSTRUMENT_FIX.md  RESULTS_positive_control.md  SCOPING_AB_FIXES.md  SCOPING_INSTRUMENT_FIX.md  V2_CHANGES.md  V4_EXECUTION_STATUS.md  architecture.md  benchmark.py  decision-ledger.jsonl  feasibility.md  history.csv  model.pt  novelty.md  (+9 more)
.claude/: settings.local.json
causalcellbench/: __init__.py
logs/: v4_finale_state.json  v4_state.json
results/: CPA_info.json  RESULTS_SUMMARY.md  calibration_comparison.md  calibration_diagnostics.json  calibration_results.json  eval_results_n100.json  eval_results_n102.json  eval_results_n196.json  eval_results_n200.json  eval_results_n200_calibrated.json  eval_results_n200_vanilla.json  eval_results_n50.json  eval_results_n6.json  full_pipeline_results.json  (+5 more)
(+504 files in other folders)
