[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalcellbench"
version = "0.2.0"
description = "Benchmarking whether virtual cell model simulations preserve causal structure for gene regulatory network inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"
authors = [
    {name = "Aayan Alwani"},
]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<1.14",
    "scikit-learn>=1.3,<1.6",
    "anndata>=0.10,<0.11",
    "scanpy>=1.10,<1.11",
    "pandas>=2.0,<2.3",
    "networkx>=3.0,<3.4",
    "matplotlib>=3.7,<3.10",
    "requests>=2.28",
]

[project.optional-dependencies]
causalbench = [
    "gies>=0.1,<0.2",
    "arboreto>=0.1.6",
]
models = [
    "pertpy>=0.9",
]
test = [
    "pytest>=7.0",
]
all = [
    "causalcellbench[causalbench,models,test]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["causalcellbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
